<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/default_padding">

      <ImageView
         android:layout_width="@dimen/login_image_size"
         android:layout_height="@dimen/login_image_size"
         android:layout_gravity="center"
         android:layout_margin="@dimen/login_image_margin"
         android:src="@mipmap/ic_launcher" />

      <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/user_name" />

      <EditText
         android:id="@+id/login_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/user_hint"
         android:lines="1" />

      <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/password_name" />

      <EditText
         android:id="@+id/login_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/pass_hint"
         android:inputType="textPassword"
         android:lines="1" />

      <Button
         android:id="@+id/login_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login" />

   </LinearLayout>
</ScrollView>